<resources>
    // STRINGS FOR AMazeActivity
    <string name="app_name">AMazeByNoahSchulman</string>
    <string name="welcome">ESCAPE HELL\'S MAZE</string>
    <string name="revisit">REVISIT</string>
    <string name="explore">EXPLORE</string>
    <string name="seekBarString">SIZE: 0</string>
    <string name="builderSpinnerString">BUILDER:</string>
    <string name="roomSwitch">ROOMS</string>
    <string-array name="builder">
        <item>Boruvka</item>
        <item>DFS</item>
        <item>Prim</item>
    </string-array>


    // STRINGS FOR GeneratingActivity
    <string name="constructing">SLAVES CONSTRUCTING MAZE...</string>
    <string name="please">SELECT A DRIVER TO START!</string>
    <string name="please2">SELECT SENSORS TO START!</string>
    <string name="buildProgress">BUILD PROGRESS:</string>
    <string name="start">START JOURNEY</string>
    <string name="driver">SELECT DRIVER</string>
    <string name="Manual">MANUAL</string>
    <string name="Wallfollower">WALL FOLLOWER</string>
    <string name="Wizard">WIZARD</string>
    <string name="robotConfig">SELECT SENSORS</string>
    <string name="premium">PREMIUM</string>
    <string name="mediocre">MEDIOCRE</string>
    <string name="soso">SOSO</string>
    <string name="shaky">SHAKY</string>
    <string name="shortly">GAME STARTING SHORTLY</string>

    // strings for PlayManuallyActivity
    <string name="showMap">SHOW MAP</string>
    <string name="showSolution">SHOW SOLUTION</string>
    <string name="showVisibleWalls">SHOW VISIBLE WALLS</string>
    <string name="mapSize">MAP SIZE</string>
    <string name="shortcut">SHORTCUT</string>
    <string name="zoomIn">+</string>
    <string name="zoomOut">-</string>

    // strings for PlayAnimationActivity
    <string name="remeiningEnergy">ENERGY</string>
    <string name="pause">PAUSE</string>
    <string name="start1">START</string>
    <string name="animationSpeed">ANIMATION SPEED</string>
    <string name="sensorStatus">SENSOR STATUS</string>
    <string name="front">FRONT</string>
    <string name="back">BACK</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="go2Winning">GO2WINNING</string>
    <string name="go2Losing">GO2LOSING</string>

    // strings for WinningActivity
    <string name="congratulations">CONGRATULATIONS! YOU ESCAPED</string>
    <string name="restartGame">RESTART GAME</string>
    <string name="pathLength">PATH LENGTH: </string>
    <string name="shortestPathLength">SHORTEST POSSIBLE PATH: </string>
    <string name="energyConsumption">ENERGY CONSUMED: </string>

    // strings for LosingActivity
    <string name="youLost">YOU LOST</string>
    <string name="reason">ROBOT RAN OUT OF ENERGY OR CRASHED</string>


</resources>