<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.LosingActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/youLost"
        android:textColor="#FF0016"
        android:textSize="48sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="46dp" />

    <Button
        android:id="@+id/restartButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restartGame"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="666dp" />

    <TextView
        android:id="@+id/shortestPathLengthTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shortestPathLength"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="343dp" />

    <TextView
        android:id="@+id/pathLengthTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pathLength"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="309dp" />

    <TextView
        android:id="@+id/energyConsumptionTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/energyConsumption"
        android:textStyle="bold"
        android:visibility="visible"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="384dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reason"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="149dp" />

</androidx.constraintlayout.widget.ConstraintLayout>