<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".gui.GeneratingActivity"
    tools:visibility="visible">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="608dp"
        android:layout_height="1290dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:srcCompat="@drawable/hell_slaves_option_1"
        tools:layout_editor_absoluteX="-72dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textConstructing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="serif"
        android:text="@string/constructing"
        android:textAlignment="center"
        android:textColor="@color/hell_main"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_driver">

        <RadioButton
            android:id="@+id/radio_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/hell_main"
            android:fontFamily="serif"
            android:onClick="checkButton"
            android:text="@string/Manual"
            android:textColor="@color/hell_main"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/radio_wallfollower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/hell_main"
            android:fontFamily="serif"
            android:onClick="checkButton"
            android:text="@string/Wallfollower"
            android:textColor="@color/hell_main"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/radio_wizard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/hell_main"
            android:fontFamily="serif"
            android:onClick="checkButton"
            android:text="@string/Wizard"
            android:textColor="@color/hell_main"
            android:textSize="17sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="serif"
        android:text="@string/driver"
        android:textColor="@color/hell_main"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/hell_main"
        android:foregroundTint="@color/hell_main"
        android:indeterminate="false"
        android:outlineAmbientShadowColor="@color/hell_main"
        android:progressBackgroundTint="@color/hell_main"
        android:progressTint="@color/hell_main"
        android:secondaryProgressTint="@color/hell_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="serif"
        android:text="@string/buildProgress"
        android:textAllCaps="false"
        android:textColor="@color/hell_main"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textConstructing" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/please"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar1"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="serif"
        android:text="@string/robotConfig"
        android:textColor="@color/hell_main"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:visibility="visible" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:visibility="visible">

        <RadioButton
            android:id="@+id/radio_premium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/hell_main"
            android:fontFamily="serif"
            android:onClick="checkButton2"
            android:text="@string/premium"
            android:textColor="@color/hell_main"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/radio_mediocre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/hell_main"
            android:fontFamily="serif"
            android:onClick="checkButton2"
            android:text="@string/mediocre"
            android:textColor="@color/hell_main"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/radio_soso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/hell_main"
            android:fontFamily="serif"
            android:onClick="checkButton2"
            android:text="@string/soso"
            android:textColor="@color/hell_main"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/radio_shaky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/hell_main"
            android:fontFamily="serif"
            android:onClick="checkButton2"
            android:text="@string/shaky"
            android:textColor="@color/hell_main"
            android:textSize="17sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/please2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/shortly"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>