<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".gui.PlayAnimationActivity"
    tools:visibility="visible">


    <ImageView
        android:id="@+id/backOFF"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/frontOFF"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/red"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/front"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensorStatusTextView" />

    <ImageView
        android:id="@+id/rightOFF"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/red"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/leftON"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:elevation="2dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/rightOFF"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/green"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/backON"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/frontOFF"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/green"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/sensorStatusTextView" />

    <ImageView
        android:id="@+id/rightON"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/green"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/frontOFF"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/red"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/right"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensorStatusTextView" />

    <ImageView
        android:id="@+id/frontON"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/green"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:text="@string/left"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/sensorStatusTextView" />

    <TextView
        android:id="@+id/sensorStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sensorStatus"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/leftOFF"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/rightOFF"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/red"
        tools:visibility="visible" />

    <Switch
        android:id="@+id/showMapSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/showMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationSpeedSeekBar"></Switch>

    <TextView
        android:id="@+id/mapSizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapSize"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showMapSwitch" />

    <ProgressBar
        android:id="@+id/energyProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:max="3500"
        android:progress="3500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="56dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:text="@string/remeiningEnergy"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playPauseToggleButton" />

    <SeekBar
        android:id="@+id/animationSpeedSeekBar"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:max="8"
        android:progress="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/animationSpeed"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/energyProgressBar" />

    <edu.wm.cs301.amazebynoahschulman.gui.MazePanel
        android:id="@+id/mazePanel"
        android:layout_width="375dp"
        android:layout_height="375dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backOFF"></edu.wm.cs301.amazebynoahschulman.gui.MazePanel>

    <ToggleButton
        android:id="@+id/playPauseToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#673AB7"
        android:text="ToggleButton"
        android:textOff="@string/start1"
        android:textOn="@string/pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mazePanel" />

    <Button
        android:id="@+id/zoomInButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="136dp"
        android:text="@string/zoomIn"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapSizeTextView"
        tools:visibility="visible" />

    <Button
        android:id="@+id/zoomOutButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/zoomOut"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/zoomInButton"
        app:layout_constraintTop_toBottomOf="@+id/mapSizeTextView"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>

