<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".gui.AMazeActivity"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="608dp"
        android:layout_height="1290dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/hell_background_option_1"
        tools:layout_editor_absoluteX="-72dp" />

    <TextView
        android:id="@+id/textEscapeHellsMaze"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="@color/hell_main"
        android:textSize="60sp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exploreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="63dp"
        android:backgroundTint="@color/hell_main"
        android:fontFamily="serif"
        android:text="@string/explore"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/revisitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="63dp"
        android:backgroundTint="@color/hell_main"
        android:fontFamily="serif"
        android:text="@string/revisit"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/seekBarProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:fontFamily="serif"
        android:text="@string/seekBarString"
        android:textColor="@color/hell_main"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEscapeHellsMaze" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/hell_main"
        android:max="15"
        android:progressBackgroundTint="@color/hell_main"
        android:progressTint="@color/hell_main"
        android:thumbTint="@color/hell_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarProgress" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:backgroundTint="@color/hell_main"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/builderSpinnerString"
        android:textColor="@color/hell_main"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <Switch
        android:id="@+id/roomsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:checked="true"
        android:fontFamily="serif"
        android:showText="false"
        android:text="@string/roomSwitch"
        android:textColor="@color/hell_main"
        android:textSize="20sp"
        android:thumbTint="@color/hell_main"
        android:trackTint="@color/hell_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />


</androidx.constraintlayout.widget.ConstraintLayout>